# fracdist

./: .gitignore  .ycm_extra_conf.py  BUILDING.md  CHANGELOG.md  CMakeLists.txt  DataParser.pm  README.md  build-data.pl  cli-common.hpp  compare.pl  fdcrit.c  fdcrit.cpp  fdpval.c  fdpval.cpp  fracdist-data.h  fracdist.c  fracdist.h  parse-vals.h  test-dreduce.pl
boost/: README.txt
cmake/: Windows-mingw32.cmake
cmake/Modules/: FindEigen3.cmake  FindGSL.cmake  FindMathJax.cmake
data/: LICENSE  frcapp01.txt  frcapp02.txt  frcapp03.txt  frcapp04.txt  frcapp05.txt  frcapp06.txt  frcapp07.txt  frcapp08.txt  frcapp09.txt  frcapp10.txt  frcapp11.txt  frcapp12.txt  frmapp01.txt  frmapp02.txt  frmapp03.txt  frmapp04.txt  frmapp05.txt  frmapp06.txt  frmapp07.txt  frmapp08.txt  frmapp09.txt  frmapp10.txt  frmapp11.txt  frmapp12.txt  update.sh
debian/: changelog  control  copyright  fracdist-doc.install  fracdist-doc.links  gbp.conf  libfracdist-dev.install  rules
debian/patches/: 0001-Remove-unknown-policies-for-old-cmake.patch  series
doc/: CMakeLists.txt  Doxyfile.in
eigen3/: README.txt
fracdist/: common.cpp  common.hpp  critical.cpp  critical.hpp  data.cpp  data.hpp  pvalue.cpp  pvalue.hpp  version.cpp.in  version.hpp
